--- a/main.css
+++ b/main.css
@@ -13,14 +13,14 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-
-  /* background-color: white; */
 }
 .nav-logo {
   padding-left: 1.5rem;
 }
 .logo {
-  width: 15%;
+  width: 20%;
+  border-radius: 40%;
+  margin-top: 0.5rem;
 }
 .nav {
   position: fixed;
@@ -40,7 +40,6 @@ body {
 .nav-links {
   display: flex;
   flex-direction: row;
-  /* margin-right: 2rem; */
 }
 ul {
   margin: 0;
@@ -54,7 +53,7 @@ a {
   text-decoration: none;
   color: rgb(51, 8, 8);
   font-weight: bold;
-  font-size: 20px;
+  font-size: 24px;
   font-family: "Grand Hotel", cursive;
   letter-spacing: 0.3rem;
 }
@@ -97,25 +96,6 @@ h2 {
   text-align: center;
   padding: 2rem 1rem;
 }
-/* .about-info {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-}
-.about-container {
-  display: flex;
-  flex-direction: row;
-  gap: 2rem;
-  width: 100%;
-}
-.about-img {
-  width: 30%;
-  padding: 1.5rem 0 0 0;
-}
-.about-par {
-  text-align: left;
-} */
 
 .about-info {
   display: grid;
@@ -233,18 +213,22 @@ i {
   .header {
     width: 100%;
   }
+  .nav {
+    position: fixed;
+  }
   .nav-logo {
+    width: 100vw;
     padding-left: 0.25rem;
   }
   .logo {
-    width: 80%;
+    width: 100%;
   }
+
   .nav,
   .description {
     display: flex;
     flex-direction: row;
     align-items: center;
-    width: 100%;
     height: 8%;
   }
   .nav-links {
@@ -259,7 +243,8 @@ i {
     margin: 0.5rem;
   }
   .description {
-    margin-top: 2rem;
+    width: 100%;
+    margin: 2rem 0;
   }
   .mobile {
     display: block;
@@ -270,7 +255,7 @@ i {
   }
   .header-intro {
     font-size: 3rem;
-    padding: 0 2.5rem;
+    padding: 0 1rem;
     text-align: center;
   }
 
@@ -320,16 +305,18 @@ i {
   #video {
     display: flex;
     flex-direction: column;
-  }
-  .video > iframe {
+    justify-content: center;
     padding: 0;
-    height: 100%;
+    margin-top: 1rem;
   }
+  iframe {
+    width: 85vw;
+    padding: 1rem;
+    overflow: hidden;
+  }
+
   .video-img {
-    width: 80vw;
-    height: 20vh;
-    max-height: 20rem;
-    object-fit: cover;
+    display: none;
   }
   .reviews-grid {
     display: grid;
@@ -361,8 +348,8 @@ i {
     width: 100%;
   }
   .terms__list > a {
-      margin-left: 0.25rem;
-  font-size: 14px;
+    margin-left: 0.25rem;
+    font-size: 14px;
   }
   .terms {
     display: flex;
@@ -374,5 +361,97 @@ i {
     justify-content: flex-end;
     text-align: right;
     font-family: "Grand Hotel", cursive;
+  }
+}
+
+@media only screen and (min-width: 430px) and (max-width: 820px) {
+  a {
+    font-size: 30px;
+  }
+  li {
+    margin: 0.8rem;
+  }
+  .nav {
+    position: fixed;
+  }
+  .nav-logo {
+    margin-top: 1rem;
+    padding: 0;
+    width: 75%;
+  }
+  .logo {
+    width: 70%;
+  }
+
+  .first-descr-img {
+    display: none;
+  }
+  h1 {
+    font-size: 70px;
+  }
+  .header-img {
+    width: 50%;
+    padding-left: 2rem;
+  }
+  .header-intro,
+  .header-intro > p {
+    padding: 0;
+  }
+
+  .about-container {
+    display: flex;
+    flex-direction: column;
+    font-size: 36px;
+  }
+
+  .sec {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+
+  .gallery {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  #video {
+    grid-template-columns: repeat(1, 1fr);
+    justify-items: center;
+  }
+
+  .video > iframe {
+    width: 100%;
+  }
+  .video-img {
+    display: none;
+  }
+
+  .reviews-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .contacts-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .big-logo {
+    grid-row: 1 / 2;
+    grid-column: 2 / 3;
+    width: 50%;
+    justify-self: center;
+  }
+  .map {
+    grid-row: 1 / 3;
+    grid-column: 1 / 2;
+    width: 100%;
+    height: 100%;
+  }
+  .el-tel-add {
+    grid-row: 2 / 3;
+    grid-column: 2 / 3;
+    padding: 0;
+  }
+  .terms__list > a {
+    font-size: 20px;
+    padding: 0;
+    letter-spacing: 0.1rem;
   }
 }
